// Copyright 2014 Baidu Inc. All Rights Reserved.
//
// 文件内容：baidu exchange service 实时竞价协议文件
//

message BidRequest {
  // 请求ID，唯一标识本次请求，明文字符串
  required string id = 1;

  // **** 用户信息 ****
  // 用户IP地址，点分十进制字符串
  optional string ip = 2;
  // User-Agent
  optional string user_agent = 3;
  // 用户ID
  optional string baidu_user_id = 4;
  // 用户ID版本
  optional int32 baidu_user_id_version = 5;
  // 用户分类
  repeated int64 user_category = 6;
  // 用户性别
  enum Gender {
    UNKNOWN = 0;
    MALE = 1;
    FEMALE = 2;
  }
  optional Gender gender = 7;
  // 页面语言
  optional string detected_language = 9;
  // flash版本
  optional string flash_version = 10;

  // **** 位置信息 ****
  message Geo {
    // 经纬度信息
    message Coordinate {
        // 经纬度坐标标准  
        enum Standard {
            // 百度地图的经纬度坐标标准
            BD_09 = 0;
            // 国测局制定的经纬度坐标标准
            GCJ_02 = 1;
            // 国际经纬度坐标标准 
            WGS_84 = 2;
        }
        // 地图坐标标准
        optional Standard standard = 1;
        // 维度
        optional float latitude = 2;
        // 经度
        optional float longitude = 3;
    }
    repeated Coordinate user_coordinate = 1;

    // 用户位置信息
    message UserLocation {
        // 省份
        optional string province = 1;
        // 城市
        optional string city = 2;
        // 区县
        optional string district = 3;
        // 街道
        optional string street = 4;
    }
    optional UserLocation user_location = 2;
  }  
  optional Geo user_geo_info = 28;

  // **** 页面信息 ****
  // 当前页面URL
  optional string url = 11;
  // 请求的refer
  optional string referer = 12;
  // 网站分类
  optional int32 site_category = 13;
  // 网站质量类型
  optional int32 site_quality = 14;
  // 页面类型
  optional int32 page_type = 15;
  // 页面关键词
  repeated string page_keyword = 17;
  // 页面内容质量
  optional int32 page_quality = 18;
  // 页面分类
  optional int32 page_vertical = 21;
  // 发布商不允许的广告行业
  repeated int32 excluded_product_category = 19 [packed=true];

  // **** 移动设备信息 ****
  message Mobile {
    // 百度唯一标示移动设备的编号
    optional string device_id = 1;      
    // 设备类型定义
    enum MobileDeviceType {
        UNKNOWN_DEVICE = 0;
        HIGHEND_PHONE = 1;
        TABLET = 2;
    }
    // 设备类型
    optional MobileDeviceType device_type = 2;
    // 移动平台名，例如android，iphone等等
    enum OS {
        UNKNOWN_OS = 0;
        IOS = 1;
        ANDROID = 2;
        WINDOWS_PHONE = 3;
    }
    optional OS platform = 3 [default = UNKNOWN_OS];
    // 移动操作系统版本号
    // 例如 Android 2.1, major, micro分别是2,1
    // 例如 Iphone 4.2.1，major, minor, micro分别是4,2,1
    message DeviceOsVersion {
        optional int32 os_version_major = 1;
        optional int32 os_version_minor = 2;
        optional int32 os_version_micro = 3;
    };
    optional DeviceOsVersion os_version = 4;
    // 设备品牌
    optional string brand = 5;
    // 设备机型
    optional string model = 6;
    // 设备屏宽
    optional int32 screen_width = 7;
    // 设备屏高
    optional int32 screen_height = 8;
    // 运营商编号（MCC+MNC编号）
    // 例如中国移动 46000
    // 前三位是Mobile Country Code
    // 后两位是Mobile Network Code
    optional int64 carrier_id = 9;
    // 无线网络类型
    enum WirelessNetworkType {
        UNKNOWN_NETWORK = 0;
        WIFI = 1;
        MOBILE_2G = 2;
        MOBILE_3G = 3;
        MOBILE_4G = 4;
    }
    optional WirelessNetworkType wireless_network_type = 10;

    // 移动设备上为广告控制提供的ID
    optional string for_advertising_id = 11;

    // **** 移动应用信息 ****
    message MobileApp {
        // 百度移动联盟为该App分配的app id
        optional string app_id = 1;
        // 如果来自苹果商店，则直接是app-store id
        // 如果来自Android设备，则是package的全名
        optional string app_bundle_id = 2;
        // App应用分类
        optional int32 app_category = 3;
        // App开发者ID
        optional int32 app_publisher_id = 4;
        // App允许的交互类型定义
        // 电话、下载
        enum AppInteractionType {
            TELEPHONE = 0;
            DOWNLOAD = 1;
        }
        // App允许的交互类型
        repeated AppInteractionType app_interaction_type = 5;
    }
    // 移动应用信息，当流量来自App时该字段非空
    optional MobileApp mobile_app = 12;
  }
  // 移动设备信息，当流量来自移动设备时该字段非空
  optional Mobile mobile = 29;

  // 视频流量的媒体信息
  message Video {
    // 视频的标题
    optional string title = 1;
    // 视频的标签
    repeated string tags  = 2;
    // 视频的播放时长
    optional int32  content_length = 3;
  }
  optional Video video = 30;

  // **** 广告位信息 ****
  message AdSlot {
    // 广告位ID, 全局唯一id
    optional uint64 ad_block_key = 1;
    // 当前页面广告位顺序id，同一页面从1开始
    optional int32 sequence_id = 2;
    // 展示类型
    optional int32 adslot_type = 3;
    // 宽
    optional int32 width = 4;
    // 高
    optional int32 height = 5;
    // 展示位置
    optional int32 slot_visibility = 6;
    // 发布商允许的创意类型
    repeated int32 creative_type = 7 [packed=true];
    // 发布商不允许的landing page url
    repeated string excluded_landing_page_url = 8;
    // 发布商设置的底价，单位分
    optional int32 minimum_cpm = 9;
    // 视频广告的最大时长
    optional int32 max_video_duration = 10;
    // 视频广告的最小时长
    optional int32 min_video_duration = 11;
    // 视频广告的播出延时， 0及正整数表示前贴，-1表示中贴，-2表示后贴
    optional int32 video_start_delay = 12;
  }
  // 默认每次请求一个广告位
  repeated AdSlot adslot = 20;

  // **** 系统使用 ****
  optional bool is_test = 26 [default=false];
  optional bool is_ping = 27 [default=false];
}

message BidResponse {
    // 返回ID，将请求中的id赋值给返回id，便于session trace
    required string id = 1;

    // **** 竞价广告信息 ****
    message Ad {
        // 广告位ID
        optional int32 sequence_id = 1;
        // 对于静态创意（dsp返回元数据，BES进行广告拼装），creative_id
        // 作为创意ID，唯一标识元数据中的每个创意（目前仅支持一个创意）。
        //
        // 对于动态创意，creative_id唯一标识html snippet。BES要求对动态创
        // 意的物料及win notice url等进行审核。同一个buyer的相同id的创意
        // 只会被审核一次，通过后不再审核。buyer应保证含有相同创意及物料
        // 的html_snippet的snippet id相同，避免重复审核。
        optional int64 creative_id = 2;
        // 最高竞价，单位分
        optional int32 max_cpm = 3;
        // 扩展参数
        // 仅静态创意需要填充
        optional string extdata = 5;
        // 是否进行cookie mapping
        // 仅静态创意需要填充
        optional bool is_cookie_matching = 6;
        // html_snippet字段仅在返回动态创意时使用。buyer将拼装完成的
        // 创意及其物料拼装到html中，返回给BES。
        // BES经过判断，认为*拥有html_snippet字段的响应*属于动态创意，
        // 并通过此类字段获取必须的物料信息。相应数据中如遗漏字段，则
        // BES不能保证其参与竞价。
        //
        // 如何获知点击信息：
        // html snippet代码。该字段中需要填充click url的位置应填充
        // 宏%%CLICK_URL_{N}%%（这里{N}从0开始，应使用具体的序号代替，
        // 并与target_url中的顺序一致），并将click url填写至
        // target_url字段。BES会根据buyer的target_url
        // 构建最终click url之后，用其替换该宏。
        // 如下html中包含两个创意，则需要注册两个宏%%CLICK_URL_0%%和
        // %%CLICK_URL_1%%。并在target_url字段中顺序赋值。
        // std::string html("<BODY>...<a href="%%CLICK_URL_0%%"/>.."
        //  "<a href="%%CLICK_URL_1%%"/>...</BODY>"
        // ad.set_html_snippet(html);
        // ad.add_target_url("http://click.buyer.com?idea=ad1...");
        // ad.add_target_url("http://click.buyer.com?idea=ad2...");
        // 宏的错误（如顺序、遗漏等）或者target_url的赋值错
        // 误都会导致BES对target_url填充出错。
        //
        // 如何获知竞价后的计价信息：
        // 如buyer需要获知竞价成功后创意的cpm，可在期望的monitor_url
        // 字段特定位置添加宏%%PRICE%%。BES通过替换会使用cpm替换该宏。
        // 例：
        // http://wins.buyer.com?key1=val1&&cpm=%%PRICE%%...
        // 仅动态创意需要填充
        optional string html_snippet = 7;
        // 广告主id。仅动态创意需要填充
        // 动态创意要求一个html snippet的所有广告属于同一个广告主。
        // 仅动态创意需要填充
        optional uint64 advertiser_id = 8;
        // 物料尺寸 - 宽度。需与请求中的尺寸一致
        // 仅动态创意需要填充
        optional int32  width = 9;
        // 物料尺寸 - 高度。需与请求中的尺寸一致
        // 仅动态创意需要填充
        optional int32  height = 10;
        // 创意所属行业的行业id。本字段的意义与静态创意中入库物料所需
        // 行业id相同。
        // 仅动态创意需要填充
        optional int32  category = 11;
        // 创意的物料类型
        // 仅动态创意需要填充
        optional int32  type = 12;
        // 创意的landing page。要求所有创意的landing page拥有相同的域，
        // 同时landing page应为target_url的最后一次跳转。
        // 注意：这里仅填landing page的domain信息即可。如：
        // http://landing_page.advertiser.com/example.php?param1=...
        // 如上url的landing page应填入landing_page.advertiser.com。
        // 仅动态创意需要填充
        optional string landing_page = 13;
        // 创意的click url。响应中含有多个创意的情况下，每个创意click
        // url的顺序应与创意在html snippet中的顺序一致。BES将顺序进行
        // click url的替换。
        // 如该顺序不正确，将引发点击的统计偏差。
        // 仅动态创意需要填充
        repeated string target_url = 14;
    }
    // 目前只支持一个竞价广告返回
    repeated Ad ad = 2;

    // **** 系统使用 ****
    // debug接口
    optional string debug_string = 3;
    // DSP处理时间
    optional int32 processing_time_ms = 4;

}
